# text_summery_rep

./: .gitignore  README.md  main.py  pyproject.toml  requirement.txt
app/: streamlit.py
data/: dawnload.py
notebook/: eda.ipynb
notebooks/: eda.ipynb
src/data/: dataset.py  loader.py  prepare_data.py  train_test_split.py
src/dataaaa/: dataloder.py  loader.py  transforms.py
src/model/: cnn.py  evaluation.py  model_bart.py  prediction.py  train.py
src/pipelines/: model_training.py
