[project]
name = "desi-food-classifier-cnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.126.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "wandb>=0.23.1",
]
